--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
   - functions
   - deploy
   - helloGET
-  - --region=us-east1
+  - --region=us-central1
   - --source=.
   - --trigger-http
   - --runtime=nodejs18
