--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "firebase-admin": "^12.1.1",
+    "fireorm": "^0.23.3",
+    "nestjs-fireorm": "^1.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
